Garwig will always loot or pick up the Sacred Hammer from NH after beating him.
Garwig will know NH took the Sacred Hammer if NH has it equipped.
Garwig will not tell NH about the hammer, if NH has the hammer.
Garwig will talk with NH even if he has been caught for a crime.
Geppert does not create a runestone or a lump of ore in his inventory if Kervo dies.
Gerold can be asked whether he ever sleeps only before receiving the order from Garond to free Gorn.
Gerold gives explicit options for giving stew and fish soup.
Gerold will not keep the note for Gorn in his inventory.
Gerold will not wait to say that he delivered the note if Gorn is already out of the prison.
Girion does not count towards max ship crew.
Gorax waits for NH at church gate to offer him the task to kill Pedro.
Gorn leads the NH to the rock fortress instead of running ahead of him.
Greg's treasure hunt quest cancels if the first treasure is not given to him and he will comment in Jharkendar if the quest fails.
Grimbald does not teach NH for free without finishing the hunt.
Grimbald gives NH experience for killed snappers.
Grimbald makes a remark once the hunt is over.
Guard (1061) at Dexter's camp does not react to weapons or magic before talking to NH at least once.
Hagen actually takes Cornelius' diary from NH.
Hagen can only be told about carrying the eye if NH has it.
Hagen will hint at NH joining paladins only when all requirements are fulfilled.
Hagen will not make NH paladin before delivering the report from Valley of Mines to avoid issue with Pedro not letting NH in monastery.
Hagens dialog has 1 more previously inaccessible dialogue lines.
Halvor is not given the compromising note for reading.
Hanna has 16 lines of dialogue and new interaction restored related to the thieves' guild.
Hanna will not take Lehmar's book of debts if NH ratted out on thieves' guild.
Harad accepts any orc weapon for his quest.
Harad will take the best orc weapon NH has and inspect it before commenting on it.