@@ -51,11 +51,14 @@ FUNC VOID Rtn_WaitForDiego_403 ()
 	TA_Stand_WP		(08,00,22,00,"NW_CITY_UPTOWN_PATH_23");	 
 };
 
-FUNC VOID Rtn_NewLife_403 ()		
+FUNC VOID Rtn_Flee_403()
+{
+	TA_FleeToWP(22,0,8,0,"NW_CITY_HABOUR_POOR_AREA_PATH_03");
+	TA_FleeToWP(8,0,22,0,"NW_CITY_HABOUR_POOR_AREA_PATH_03");
+};
+
+FUNC VOID Rtn_NewLife_403 ()
 {	
 	TA_Smalltalk	(22,00,08,00,"NW_CITY_HABOUR_POOR_AREA_PATH_03");
-	TA_Smalltalk	(08,00,11,00,"NW_CITY_HABOUR_POOR_AREA_PATH_03");
-    TA_Smalltalk 	(11,00,15,00,"NW_CITY_HABOUR_POOR_AREA_PATH_03");
-    TA_Smalltalk	(15,00,18,00,"NW_CITY_HABOUR_POOR_AREA_PATH_03");
-	TA_Smalltalk 	(18,00,22,00,"NW_CITY_HABOUR_POOR_AREA_PATH_03");
+	TA_Smalltalk	(08,00,22,00,"NW_CITY_HABOUR_POOR_AREA_PATH_03");
 };
