@@ -223,6 +223,7 @@ Garwig will know NH took the Sacred Hammer if NH has it equipped.
 Garwig will not tell NH about the hammer, if NH has the hammer.
 Garwig will talk with NH even if he has been caught for a crime.
 Geppert does not create a runestone or a lump of ore in his inventory if Kervo dies.
+Gerbrandt will run from upper quarter after receiving Diego's letter.
 Gerold can be asked whether he ever sleeps only before receiving the order from Garond to free Gorn.
 Gerold gives explicit options for giving stew and fish soup.
 Gerold will not keep the note for Gorn in his inventory.
